--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
   <img src="https://img.icons8.com/color/96/000000/firebase.png" alt="Firebase" style="margin: 10px;">
    <img src="https://img.icons8.com/color/96/000000/react-native.png" alt="react native" style="margin: 0px;">
   <img src="https://img.icons8.com/color/96/000000/tailwindcss.png" alt="JavaScript (JS)" style="margin: 10px;">
- 
+  <img src="https://img.icons8.com/color/96/000000/nodejs.png" alt="JavaScript (JS)" style="margin: 10px;">
   <img src="https://img.icons8.com/color/96/000000/postgreesql.png" alt="PostgreSQL" style="margin: 10px;">
   <img src="https://img.icons8.com/color/96/000000/c-plus-plus-logo.png" alt="C++" style="margin: 10px;">
   <img src="https://img.icons8.com/color/96/000000/python.png" alt="Python" style="margin: 10px;">
